--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,8 +14,23 @@
         .navbar-header
           %span.navbar-brand Netguru Kraków Workshops 2014
         %p.navbar-text.navbar-right
-          Links should go here
+          - if user_signed_in?
+            Logged in as
+            = succeed "." do
+              %strong= current_user.firstname + ' ' + current_user.lastname
+            |
+            = link_to 'Edit your profile', edit_user_registration_path, :class => 'navbar-link'
+            |
+            \#{link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'}
+          - else
+            = link_to "Sign up", new_user_registration_path, :class => 'navbar-link'
+            |
+            \#{link_to "Login", new_user_session_path, :class => 'navbar-link'}
     .container-fluid
       .row
         .col-lg-12
+          - if notice
+            %p.alert.alert-success= notice
+          - if alert
+            %p.alert.alert-danger= alert
           = yield
