--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -11,8 +11,9 @@
     %tr
       %td= category.name
       %td= link_to 'Show', category
-      %td= link_to 'Edit', edit_category_path(category)
-      %td= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
+      - if current_user.try(:admin?)
+        %td= link_to 'Edit', edit_category_path(category)
+        %td= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
 
