Path & view fixes

--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,7 +1,7 @@
 %p#notice= notice
 
 %p
-  = link_to '» Display all products for this category', products_path
+  = link_to '» Display all products for this category', category_products_path(category)
   %br
   %br
 
