--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -4,4 +4,4 @@
 
 = link_to 'Show', category_product_path(category, product)
 \|
-= link_to 'Back', category_path(category)
+= link_to 'Back', category_products_path(category)
