--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -9,13 +9,14 @@
     %th
     %th
 
-  - products.each do |product|
+  - category.products.each do |product|
     %tr
       %td= product.title
       %td= product.description
       %td= product.price
       %td= link_to 'Show', category_product_path(product.category, product)
-      %td= link_to 'Edit', edit_category_product_path(product.category, product)
-      %td= link_to 'Destroy', category_product_path(product.category, product), method: :delete, data: { confirm: 'Are you sure?' }
+      - if current_user.try(:admin?)
+        %td= link_to 'Edit', edit_category_product_path(product.category, product)
+        %td= link_to 'Destroy', category_product_path(product.category, product), method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
