--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -13,7 +13,8 @@
       .container-fluid
         .navbar-header
           %span.navbar-brand
-            = link_to 'Netguru Kraków Workshops 2014', root_path
+            = link_to '» ', root_path
+            Netguru Kraków Workshops 2014
         %p.navbar-text.navbar-right
           - if user_signed_in?
             Logged in as
